# open-deepsearch

./: .gitignore  README.md  app.py  app_console.py  pyproject.toml
demo/: demo.py  doc.md  task.md
