[tool.poetry]
name = "open-deepsearch"
version = "0.1.0"
description = "Open version of deepsearch"
authors = ["Raphaël MANSUY <raphael.mansuy@gmail.com>"]
license = "Apache 2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.41.1"
quantalogic = "^0.33.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
